fixed mobile overflow 📝

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1051,17 +1051,7 @@ input, select, textarea {
 		}
 
 		@media screen and (max-width: 736px) {
-			html, body {
-			width: 100%;
-			height: 100%;
-			margin: 0;
-			padding: 0;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			min-height: 100vh;
-			/* overflow-x: hidden; */
-		}
+
 			.row {
 				display: flex;
 				flex-wrap: wrap;
